# suryp_desktop

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_client.rs  classifier.rs  config.rs  file_watcher.rs  main.rs  storage.rs
src/components/: Dashboard.tsx  Login.tsx  Settings.tsx
