[package]
name = "filesorter-desktop"
version = "1.0.0"
description = "FileSorter Desktop Agent"
authors = ["FileSorter Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "window-all", "system-tray", "notification-all", "dialog-all", "fs-all", "path-all", "http-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
notify = "6.1"
reqwest = { version = "0.11", features = ["json"] }
keyring = "2.3"
dirs = "5.0"
chrono = "0.4"
uuid = { version = "1.7", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
regex = "1.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
